--- a/Unity/UnityVS.Unity.CSharp.csproj
+++ b/Unity/UnityVS.Unity.CSharp.csproj
@@ -52,6 +52,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="FyreVM">
       <HintPath>Assets\Plugins\FyreVM.dll</HintPath>
     </Reference>
@@ -60,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Code\ForceFocusSingleController.cs" />
     <Compile Include="Assets\Code\GameConstants.cs" />
     <Compile Include="Assets\Code\GameInit.cs" />
     <Compile Include="Assets\Code\GlulxStateService.cs" />
